// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dashboard V3 snapshots (token consistency) DashboardV3Client happy state matches snapshot (token-based layout) 1`] = `
<div>
  <div
    class="min-h-full bg-[var(--page-bg)] px-[var(--space-page-x)] py-[var(--space-page-y)] space-y-2"
  >
    <div
      class="grid gap-3 grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 items-stretch"
    >
      <a
        class="block focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
        href="/inventory"
      >
        <div
          class="rounded-lg border border-[var(--border)] bg-[var(--panel)] shadow-sm rounded-[var(--radius-card)] bg-[var(--surface)] border border-[var(--border)] shadow-[var(--shadow-card-stack)] transition-shadow duration-150 hover:shadow-[var(--shadow-card-hover)]"
        >
          <div
            class="p-4 pt-0 px-4 pb-4 pt-1"
          >
            <div
              class="flex items-start justify-between"
            >
              <div
                class="min-w-0"
              >
                <div
                  class="text-sm font-semibold text-[var(--text)]"
                >
                  Inventory
                </div>
              </div>
              <div
                class="flex items-center justify-center w-9 h-9 rounded-[10px] bg-black/5 border border-black/5 shrink-0"
              >
                <svg
                  aria-hidden="true"
                  class="w-4 h-4 opacity-70 shrink-0"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
            <div
              class="mt-2 flex items-end justify-between gap-3"
            >
              <div
                class="text-[40px] font-bold leading-[1] text-[var(--text)]"
              >
                42
              </div>
              <div
                class="text-sm text-[var(--muted-text)] whitespace-nowrap"
              >
                +7 listed
              </div>
            </div>
            <div
              class="mt-2 flex items-center justify-between text-xs text-[var(--muted-text)]"
            >
              <div
                class="inline-flex items-center gap-2"
              >
                <span
                  aria-hidden="true"
                  class="inline-flex"
                >
                  <svg
                    class="h-3.5 w-3.5 text-[var(--muted-text)]"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </span>
                <span>
                  +7 7d
                </span>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        class="block focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
        href="/crm/opportunities"
      >
        <div
          class="rounded-lg border border-[var(--border)] bg-[var(--panel)] shadow-sm rounded-[var(--radius-card)] bg-[var(--surface)] border border-[var(--border)] shadow-[var(--shadow-card-stack)] transition-shadow duration-150 hover:shadow-[var(--shadow-card-hover)]"
        >
          <div
            class="p-4 pt-0 px-4 pb-4 pt-1"
          >
            <div
              class="flex items-start justify-between"
            >
              <div
                class="min-w-0"
              >
                <div
                  class="text-sm font-semibold text-[var(--text)]"
                >
                  Leads
                </div>
              </div>
              <div
                class="flex items-center justify-center w-9 h-9 rounded-[10px] bg-black/5 border border-black/5 shrink-0"
              >
                <svg
                  aria-hidden="true"
                  class="w-4 h-4 opacity-70 shrink-0"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
            <div
              class="mt-2 flex items-end justify-between gap-3"
            >
              <div
                class="text-[40px] font-bold leading-[1] text-[var(--text)]"
              >
                10
              </div>
            </div>
            <div
              class="mt-2 flex items-center justify-between text-xs text-[var(--muted-text)]"
            >
              <div
                class="inline-flex items-center gap-2"
              >
                <span
                  aria-hidden="true"
                  class="inline-flex"
                >
                  <svg
                    class="h-3.5 w-3.5 text-[var(--muted-text)]"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </span>
                <span>
                  No recent change
                </span>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        class="block focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
        href="/deals"
      >
        <div
          class="rounded-lg border border-[var(--border)] bg-[var(--panel)] shadow-sm rounded-[var(--radius-card)] bg-[var(--surface)] border border-[var(--border)] shadow-[var(--shadow-card-stack)] transition-shadow duration-150 hover:shadow-[var(--shadow-card-hover)]"
        >
          <div
            class="p-4 pt-0 px-4 pb-4 pt-1"
          >
            <div
              class="flex items-start justify-between"
            >
              <div
                class="min-w-0"
              >
                <div
                  class="text-sm font-semibold text-[var(--text)]"
                >
                  Deals
                </div>
              </div>
              <div
                class="flex items-center justify-center w-9 h-9 rounded-[10px] bg-black/5 border border-black/5 shrink-0"
              >
                <svg
                  aria-hidden="true"
                  class="w-4 h-4 opacity-70 shrink-0"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
            <div
              class="mt-2 flex items-end justify-between gap-3"
            >
              <div
                class="text-[40px] font-bold leading-[1] text-[var(--text)]"
              >
                5
              </div>
            </div>
            <div
              class="mt-2 flex items-center justify-between text-xs text-[var(--muted-text)]"
            >
              <div
                class="inline-flex items-center gap-2"
              >
                <span
                  aria-hidden="true"
                  class="inline-flex"
                >
                  <svg
                    class="h-3.5 w-3.5 text-[var(--muted-text)]"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </span>
                <span>
                  No recent change
                </span>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        class="block focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
        href="/lenders"
      >
        <div
          class="rounded-lg border border-[var(--border)] bg-[var(--panel)] shadow-sm rounded-[var(--radius-card)] bg-[var(--surface)] border border-[var(--border)] shadow-[var(--shadow-card-stack)] transition-shadow duration-150 hover:shadow-[var(--shadow-card-hover)]"
        >
          <div
            class="p-4 pt-0 px-4 pb-4 pt-1"
          >
            <div
              class="flex items-start justify-between"
            >
              <div
                class="min-w-0"
              >
                <div
                  class="text-sm font-semibold text-[var(--text)]"
                >
                  BHPH
                </div>
              </div>
              <div
                class="flex items-center justify-center w-9 h-9 rounded-[10px] bg-black/5 border border-black/5 shrink-0"
              >
                <svg
                  aria-hidden="true"
                  class="w-4 h-4 opacity-70 shrink-0"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
            <div
              class="mt-2 flex items-end justify-between gap-3"
            >
              <div
                class="text-[40px] font-bold leading-[1] text-[var(--text)]"
              >
                0
              </div>
            </div>
            <div
              class="mt-2 flex items-center justify-between text-xs text-[var(--muted-text)]"
            >
              <div
                class="inline-flex items-center gap-2"
              >
                <span
                  aria-hidden="true"
                  class="inline-flex"
                >
                  <svg
                    class="h-3.5 w-3.5 text-[var(--muted-text)]"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </span>
                <span>
                  No recent change
                </span>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
    <div
      class="grid gap-3 md:grid-cols-2 lg:grid-cols-3 items-start"
    >
      <div
        class="flex flex-col gap-3 min-w-0"
      >
        <div
          class="rounded-lg border border-[var(--border)] bg-[var(--panel)] shadow-sm rounded-[var(--radius-card)] bg-[var(--surface)] border border-[var(--border)] shadow-[var(--shadow-card)] hover:shadow-[var(--shadow-card-hover)] transition-shadow duration-150"
        >
          <div
            class="w-full flex flex-row items-center justify-start px-4 pt-4 pb-3 gap-2 mb-3"
          >
            <h3
              class="text-lg font-semibold leading-none tracking-tight text-base font-semibold text-[var(--text)] text-left leading-tight"
            >
              Customer Tasks
            </h3>
          </div>
          <div
            class="p-4 pt-0 px-4 pb-4 pt-0"
          >
            <ul
              class="space-y-0.5"
            >
              <li>
                <button
                  class="w-full text-left flex items-center justify-between rounded-[12px] px-2 -mx-2 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] hover:bg-[var(--surface-2)]/60 group min-h-[40px] py-2"
                  type="button"
                >
                  <span
                    class="flex items-center gap-3 min-w-0"
                  >
                    <div
                      class="flex items-center gap-3 min-w-0"
                    >
                      <span
                        class="h-7 min-w-[36px] px-2 rounded-[8px] flex items-center justify-center text-sm font-semibold text-white bg-[var(--sev-info)] text-white"
                      >
                        3
                      </span>
                      <span
                        class="text-sm font-medium text-[var(--text)] truncate"
                      >
                        New Prospects
                      </span>
                    </div>
                  </span>
                  <span
                    class="flex items-center gap-2 shrink-0 text-xs text-[var(--muted-text)]"
                  >
                    <div
                      class="flex items-center gap-2 text-xs text-[var(--text-soft)]"
                    >
                      <span>
                        3
                      </span>
                      <span>
                        •
                      </span>
                      <span>
                        3
                         Total
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="opacity-0 group-hover:opacity-100 transition"
                    >
                      →
                    </span>
                  </span>
                </button>
              </li>
              <li>
                <button
                  class="w-full text-left flex items-center justify-between rounded-[12px] px-2 -mx-2 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] hover:bg-[var(--surface-2)]/60 group min-h-[40px] py-2"
                  type="button"
                >
                  <span
                    class="flex items-center gap-3 min-w-0"
                  >
                    <div
                      class="flex items-center gap-3 min-w-0"
                    >
                      <span
                        class="h-7 min-w-[36px] px-2 rounded-[8px] flex items-center justify-center text-sm font-semibold text-white bg-[var(--sev-info)] text-white"
                      >
                        2
                      </span>
                      <span
                        class="text-sm font-medium text-[var(--text)] truncate"
                      >
                        Follow-ups
                      </span>
                    </div>
                  </span>
                  <span
                    class="flex items-center gap-2 shrink-0 text-xs text-[var(--muted-text)]"
                  >
                    <div
                      class="flex items-center gap-2 text-xs text-[var(--text-soft)]"
                    >
                      <span>
                        2
                      </span>
                      <span>
                        •
                      </span>
                      <span>
                        2
                         Total
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="opacity-0 group-hover:opacity-100 transition"
                    >
                      →
                    </span>
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="rounded-lg border border-[var(--border)] bg-[var(--panel)] shadow-sm rounded-[var(--radius-card)] bg-[var(--surface)] border border-[var(--border)] shadow-[var(--shadow-card)] hover:shadow-[var(--shadow-card-hover)] transition-shadow duration-150"
        >
          <div
            class="w-full flex flex-row items-center justify-start px-4 pt-4 pb-3 gap-2 mb-3"
          >
            <h3
              class="text-lg font-semibold leading-none tracking-tight text-base font-semibold text-[var(--text)] text-left leading-tight"
            >
              Floorplan & Lending
            </h3>
          </div>
          <div
            class="p-4 pt-0 px-4 pb-4 pt-0"
          >
            <p
              class="text-sm text-[var(--text-soft)]"
            >
              No floor plan data
            </p>
          </div>
        </div>
        <div
          class="rounded-lg border border-[var(--border)] bg-[var(--panel)] shadow-sm rounded-[var(--radius-card)] bg-[var(--surface)] border border-[var(--border)] shadow-[var(--shadow-card)] hover:shadow-[var(--shadow-card-hover)] transition-shadow duration-150"
        >
          <div
            class="w-full flex flex-row items-center justify-start px-4 pt-4 pb-3 gap-2 mb-3"
          >
            <h3
              class="text-lg font-semibold leading-none tracking-tight text-base font-semibold text-[var(--text)] text-left leading-tight"
            >
              Finance Notices
            </h3>
          </div>
          <div
            class="p-4 pt-0 px-4 pb-4 pt-0"
          >
            <p
              class="text-sm text-[var(--text-soft)]"
            >
              No notices.
            </p>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-3 min-w-0"
      >
        <div
          class="rounded-lg border border-[var(--border)] bg-[var(--panel)] shadow-sm rounded-[var(--radius-card)] bg-[var(--surface)] border border-[var(--border)] shadow-[var(--shadow-card)] hover:shadow-[var(--shadow-card-hover)] transition-shadow duration-150"
        >
          <div
            class="w-full flex flex-row items-center justify-start px-4 pt-4 pb-3 gap-2 mb-3"
          >
            <h3
              class="text-lg font-semibold leading-none tracking-tight text-base font-semibold text-[var(--text)] text-left leading-tight"
            >
              Inventory Alerts
            </h3>
          </div>
          <div
            class="p-4 pt-0 px-4 pb-4 pt-0"
          >
            <ul
              class="space-y-0.5"
            >
              <li>
                <button
                  class="w-full text-left min-h-[44px] flex items-center justify-between rounded-[12px] px-2 -mx-2 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] hover:bg-[var(--surface-2)]/60 group"
                  type="button"
                >
                  <span
                    class="flex items-center gap-3 min-w-0"
                  >
                    <div
                      class="flex items-center gap-3 min-w-0"
                    >
                      <span
                        class="flex h-7 w-7 shrink-0 items-center justify-center rounded-[10px] text-xs font-bold tabular-nums text-white bg-[var(--sev-warning)] text-white"
                      >
                        1
                      </span>
                      <span
                        class="text-sm font-medium text-[var(--text)] truncate"
                      >
                        Cars in recon
                      </span>
                    </div>
                  </span>
                  <span
                    class="flex items-center gap-2 shrink-0 text-xs text-[var(--muted-text)]"
                  >
                    <div
                      class="flex items-center gap-2 text-xs text-[var(--muted-text)]"
                    >
                      <span>
                        1
                      </span>
                      <span>
                        •
                      </span>
                      <span>
                        1
                         Total
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="opacity-0 group-hover:opacity-100 transition"
                    >
                      →
                    </span>
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="rounded-lg border border-[var(--border)] bg-[var(--panel)] shadow-sm rounded-[var(--radius-card)] bg-[var(--surface)] border border-[var(--border)] shadow-[var(--shadow-card)] hover:shadow-[var(--shadow-card-hover)] transition-shadow duration-150"
        >
          <div
            class="w-full flex flex-row items-center justify-start px-4 pt-4 pb-3 gap-2 mb-3"
          >
            <h3
              class="text-lg font-semibold leading-none tracking-tight text-base font-semibold text-[var(--text)] text-left leading-tight"
            >
              Deal Pipeline
            </h3>
          </div>
          <div
            class="p-4 pt-0 px-4 pb-4 pt-0"
          >
            <ul
              class="space-y-0.5"
            >
              <li>
                <button
                  class="w-full text-left min-h-[44px] flex items-center justify-between rounded-[12px] px-2 -mx-2 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] hover:bg-[var(--surface-2)]/60 group"
                  type="button"
                >
                  <span
                    class="flex items-center gap-3 min-w-0"
                  >
                    <div
                      class="flex items-center gap-3 min-w-0"
                    >
                      <span
                        class="flex h-7 w-7 shrink-0 items-center justify-center rounded-[10px] text-xs font-bold tabular-nums text-white bg-[var(--accent-deals)] text-white"
                      >
                        2
                      </span>
                      <span
                        class="text-sm font-medium text-[var(--text)] truncate"
                      >
                        Pending deals
                      </span>
                    </div>
                  </span>
                  <span
                    class="flex items-center gap-2 shrink-0 text-xs text-[var(--muted-text)]"
                  >
                    <div
                      class="flex items-center gap-2 text-xs text-[var(--muted-text)]"
                    >
                      <span>
                        2
                      </span>
                      <span>
                        •
                      </span>
                      <span>
                        2
                         Total
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="opacity-0 group-hover:opacity-100 transition"
                    >
                      →
                    </span>
                  </span>
                </button>
              </li>
              <li>
                <button
                  class="w-full text-left min-h-[44px] flex items-center justify-between rounded-[12px] px-2 -mx-2 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] hover:bg-[var(--surface-2)]/60 group"
                  type="button"
                >
                  <span
                    class="flex items-center gap-3 min-w-0"
                  >
                    <div
                      class="flex items-center gap-3 min-w-0"
                    >
                      <span
                        class="flex h-7 w-7 shrink-0 items-center justify-center rounded-[10px] text-xs font-bold tabular-nums text-white bg-[var(--sev-danger)] text-white"
                      >
                        0
                      </span>
                      <span
                        class="text-sm font-medium text-[var(--text)] truncate"
                      >
                        Funding issues
                      </span>
                    </div>
                  </span>
                  <span
                    class="flex items-center gap-2 shrink-0 text-xs text-[var(--muted-text)]"
                  >
                    <div
                      class="flex items-center gap-2 text-xs text-[var(--muted-text)]"
                    >
                      <span>
                        0
                      </span>
                      <span>
                        •
                      </span>
                      <span>
                        0
                         Total
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="opacity-0 group-hover:opacity-100 transition"
                    >
                      →
                    </span>
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-3 min-w-0"
      >
        <div
          class="rounded-lg border border-[var(--border)] bg-[var(--panel)] shadow-sm rounded-[var(--radius-card)] bg-[var(--surface)] border border-[var(--border)] shadow-[var(--shadow-card)] hover:shadow-[var(--shadow-card-hover)] transition-shadow duration-150"
        >
          <div
            class="w-full flex flex-row items-center justify-start px-4 pt-4 pb-3 gap-2 mb-3"
          >
            <h3
              class="text-lg font-semibold leading-none tracking-tight text-base font-semibold text-[var(--text)] text-left leading-tight"
            >
              Recommended Actions
            </h3>
          </div>
          <div
            class="p-4 pt-0 px-4 pb-4 pt-0"
          >
            <ul
              class="space-y-3"
            >
              <li
                class="rounded-[14px] border border-[var(--border)] bg-[var(--surface-2)] p-4"
              >
                <div
                  class="flex gap-3"
                >
                  <svg
                    aria-hidden="true"
                    class="h-5 w-5 shrink-0 text-[var(--muted-text)]"
                    fill="none"
                    stroke="var(--sev-warning)"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <div
                    class="min-w-0 flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-[var(--text)]"
                    >
                      1 vehicles in recon
                    </div>
                    <button
                      class="inline-flex items-center justify-center font-medium border transition-colors focus-visible:outline focus-visible:ring-2 focus-visible:ring-[var(--accent)] focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-[var(--muted)] text-[var(--text)] hover:bg-[var(--muted)]/80 border-[var(--border)] px-2.5 py-1.5 text-sm rounded mt-2 h-8 rounded-[12px] border border-[var(--border)] bg-[var(--surface)] focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
                      type="button"
                    >
                      Review
                    </button>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="rounded-lg border border-[var(--border)] bg-[var(--panel)] shadow-sm rounded-[var(--radius-card)] bg-[var(--surface)] border border-[var(--border)] shadow-[var(--shadow-card)] hover:shadow-[var(--shadow-card-hover)] transition-shadow duration-150"
        >
          <div
            class="w-full flex flex-row items-center justify-start px-4 pt-4 pb-3 gap-2 mb-3"
          >
            <h3
              class="text-lg font-semibold leading-none tracking-tight text-base font-semibold text-[var(--text)] text-left leading-tight"
            >
              Upcoming Appointments
            </h3>
          </div>
          <div
            class="p-4 pt-0 px-4 pb-4 pt-0"
          >
            <p
              class="text-sm text-[var(--text-soft)]"
            >
              No upcoming appointments.
            </p>
          </div>
        </div>
        <div
          class="rounded-lg border border-[var(--border)] bg-[var(--panel)] shadow-sm rounded-[var(--radius-card)] bg-[var(--surface)] border border-[var(--border)] shadow-[var(--shadow-card)] hover:shadow-[var(--shadow-card-hover)] transition-shadow duration-150"
        >
          <div
            class="w-full flex flex-row items-center justify-start px-4 pt-4 pb-3 gap-2 mb-3"
          >
            <h3
              class="text-lg font-semibold leading-none tracking-tight text-base font-semibold text-[var(--text)] text-left leading-tight"
            >
              Quick Actions
            </h3>
          </div>
          <div
            class="p-4 pt-0 px-4 pb-4 pt-0"
          >
            <p
              class="text-sm text-[var(--text-soft)]"
            >
              No actions available.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      aria-label="Notifications (F8)"
      class="fixed bottom-4 left-4 right-4 z-[100] flex max-h-screen flex-col-reverse gap-2 p-0 sm:left-auto sm:right-4 sm:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Dashboard V3 snapshots (token consistency) MetricCard matches snapshot (uses token classes) 1`] = `
<a
  class="block focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
  href="/inventory"
>
  <div
    class="rounded-lg border border-[var(--border)] bg-[var(--panel)] shadow-sm rounded-[var(--radius-card)] bg-[var(--surface)] border border-[var(--border)] shadow-[var(--shadow-card-stack)] transition-shadow duration-150 hover:shadow-[var(--shadow-card-hover)]"
  >
    <div
      class="p-4 pt-0 px-4 pb-4 pt-1"
    >
      <div
        class="flex items-start justify-between"
      >
        <div
          class="min-w-0"
        >
          <div
            class="text-sm font-semibold text-[var(--text)]"
          >
            Inventory
          </div>
        </div>
        <div
          class="flex items-center justify-center w-9 h-9 rounded-[10px] bg-black/5 border border-black/5 shrink-0"
        >
          <svg
            aria-hidden="true"
            class="w-4 h-4 opacity-70 shrink-0"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </div>
      <div
        class="mt-2 flex items-end justify-between gap-3"
      >
        <div
          class="text-[40px] font-bold leading-[1] text-[var(--text)]"
        >
          182
        </div>
        <div
          class="text-sm text-[var(--muted-text)] whitespace-nowrap"
        >
          +12 listed
        </div>
      </div>
      <div
        class="mt-2 flex items-center justify-between text-xs text-[var(--muted-text)]"
      >
        <div
          class="inline-flex items-center gap-2"
        >
          <span
            aria-hidden="true"
            class="inline-flex"
          >
            <svg
              class="h-3.5 w-3.5 text-[var(--muted-text)]"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </span>
          <span>
            +12 7d
          </span>
        </div>
        <div
          class="inline-flex items-center gap-2"
        >
          <span
            aria-hidden="true"
            class="inline-flex"
          >
            <svg
              class="h-3.5 w-3.5 text-[var(--muted-text)]"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 17l10-10m0 0H9m8 0v8"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </span>
          <span>
            +28 30d
          </span>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`Dashboard V3 snapshots (token consistency) WidgetCard with rows matches snapshot (uses token classes) 1`] = `
<div
  class="rounded-lg border border-[var(--border)] bg-[var(--panel)] shadow-sm rounded-[var(--radius-card)] bg-[var(--surface)] border border-[var(--border)] shadow-[var(--shadow-card)] hover:shadow-[var(--shadow-card-hover)] transition-shadow duration-150"
>
  <div
    class="w-full flex flex-row items-center justify-start px-4 pt-4 pb-3 gap-2 mb-3"
  >
    <h3
      class="text-lg font-semibold leading-none tracking-tight text-base font-semibold text-[var(--text)] text-left leading-tight"
    >
      Customer Tasks
    </h3>
  </div>
  <div
    class="p-4 pt-0 px-4 pb-4 pt-0"
  >
    <ul>
      <li>
        Row one
      </li>
      <li>
        Row two
      </li>
    </ul>
  </div>
</div>
`;
